--- a/k8s/blue-deployment.yaml
+++ b/k8s/blue-deployment.yaml
@@ -1,31 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mediops-app-blue
+  name: mediops-blue
   namespace: mediops
   labels:
-    app: mediops-app
-    color: blue
+    app: mediops
+    track: blue
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: mediops-app
-      color: blue
+      app: mediops
+      track: blue
   template:
     metadata:
       labels:
-        app: mediops-app
-        color: blue
+        app: mediops
+        track: blue
     spec:
       containers:
-      - name: mediops-app
-        image: 921483785411.dkr.ecr.us-east-1.amazonaws.com/mediops-app:v1.0-blue
-        ports:
-        - containerPort: 5000
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 5000
-          initialDelaySeconds: 5
-          periodSeconds: 10
+        - name: mediops-container
+          image: 921483785411.dkr.ecr.us-east-1.amazonaws.com/mediops-app:v1.0
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 8080
+          readinessProbe:
+            httpGet: { path: /health, port: 8080 }
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          livenessProbe:
+            httpGet: { path: /health, port: 8080 }
+            initialDelaySeconds: 15
+            periodSeconds: 10
+          resources:
+            requests: { cpu: "100m", memory: "128Mi" }
+            limits:   { cpu: "500m", memory: "512Mi" }
