--- a/k8s/blue-deployment.yaml
+++ b/k8s/blue-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mediops-blue
+  name: mediops-app-blue
   namespace: mediops
   labels:
     app: mediops
