--- a/k8s/green-deployment.yaml
+++ b/k8s/green-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mediops-green
+  name: mediops-app-green
   namespace: mediops
   labels:
     app: mediops
