--- a/k8s/green-deployment.yaml
+++ b/k8s/green-deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: mediops-app
-          image: 921483785411.dkr.ecr.us-east-1.amazonaws.com/mediops-app:v1.0
+          image: 921483785411.dkr.ecr.us-east-1.amazonaws.com/mediops-app:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
