--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ itsdangerous==2.2.0 # secure session/cookie handling
 click==8.1.7        # CLI support for Flask
 flask
 pytest
+flask_sqlalchemy
+psycopg2-binary
