--- a/k8s/green-deployment.yaml
+++ b/k8s/green-deployment.yaml
@@ -45,13 +45,27 @@ spec:
                   key: password
 
           readinessProbe:
-            httpGet: { path: /health, port: 8080 }
-            initialDelaySeconds: 5
-            periodSeconds: 5
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 20   # wait 20s before first check
+            periodSeconds: 10         # check every 10s
+            timeoutSeconds: 3
+            failureThreshold: 6       # ~60s grace before marking NotReady
+
           livenessProbe:
-            httpGet: { path: /health, port: 8080 }
-            initialDelaySeconds: 15
-            periodSeconds: 10
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 40   # give app/DB more time to be ready
+            periodSeconds: 20
+            timeoutSeconds: 3
+            failureThreshold: 3
+
           resources:
-            requests: { cpu: "100m", memory: "128Mi" }
-            limits:   { cpu: "500m", memory: "512Mi" }
+            requests:
+              cpu: "100m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "1Gi"
